--- a/common.props
+++ b/common.props
@@ -1,8 +1,31 @@
 <Project>
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <Version>1.0.0</Version>
+    <Version>5.3.3</Version>
     <NoWarn>$(NoWarn);CS1591;CS0436</NoWarn>
-	<AbpProjectType>app</AbpProjectType>
+    <PackageIconUrl>https://avatars.githubusercontent.com/u/96203006?s=40&v=4</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/dotnetpie-opensource/polpabp-presentation</PackageProjectUrl>
+    <PackageLicenseExpression>LGPL-3.0-only</PackageLicenseExpression>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/dotnetpie-opensource/polpabp-presentation</RepositoryUrl>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <!-- Include symbol files (*.pdb) in the built .nupkg -->
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="*.abppkg.analyze.json" />
+    <Content Remove="*.abppkg.analyze.json" />
+    <EmbeddedResource Include="*.abppkg.json" />
+    <Content Remove="*.abppkg.json" />
+  </ItemGroup>
+  <ItemGroup Condition="$(AssemblyName.EndsWith('HttpApi.Client'))">
+    <EmbeddedResource Include="**\*generate-proxy.json" />
+    <Content Remove="**\*generate-proxy.json" />
+  </ItemGroup>
 </Project>
