--- a/common.props
+++ b/common.props
@@ -1,16 +1,14 @@
 <Project>
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <Version>5.3.3</Version>
-    <NoWarn>$(NoWarn);CS1591;CS0436</NoWarn>
-    <PackageIconUrl>https://avatars.githubusercontent.com/u/96203006?s=40&v=4</PackageIconUrl>
+    <Version>1.0.0</Version>
+    <NoWarn>CS1591;CS0436</NoWarn>
+    <PackageIconUrl>https://avatars.githubusercontent.com/u/96203006</PackageIconUrl>
     <PackageProjectUrl>https://github.com/dotnetpie-opensource/polpabp-presentation</PackageProjectUrl>
     <PackageLicenseExpression>LGPL-3.0-only</PackageLicenseExpression>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/dotnetpie-opensource/polpabp-presentation</RepositoryUrl>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <!-- Include symbol files (*.pdb) in the built .nupkg -->
-    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
