--- a/src/PolpAbp.Presentation.Account.Web/PolpAbp.Presentation.Account.Web.csproj
+++ b/src/PolpAbp.Presentation.Account.Web/PolpAbp.Presentation.Account.Web.csproj
@@ -27,6 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\..\fwt\src\PolpAbp.Framework.Application.Contracts\PolpAbp.Framework.Application.Contracts.csproj" />
 	  <ProjectReference Include="..\..\..\fwt\src\PolpAbp.Framework.Domain\PolpAbp.Framework.Domain.csproj" />
 	  <ProjectReference Include="..\PolpAbp.Presentation.Contracts\PolpAbp.Presentation.Contracts.csproj" />
 	</ItemGroup>	
