--- a/src/PolpAbp.Presentation.Account.Web/PolpAbp.Presentation.Account.Web.csproj
+++ b/src/PolpAbp.Presentation.Account.Web/PolpAbp.Presentation.Account.Web.csproj
@@ -25,6 +25,7 @@
 		<PackageReference Include="Volo.Abp.TenantManagement.Domain" Version="5.3.2" />
 		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="5.3.2" />
 		<PackageReference Include="Volo.Abp.Emailing" Version="5.3.2" />
+		<PackageReference Include="Volo.Abp.Sms" Version="5.3.2" />
 	</ItemGroup>
 
 	<ItemGroup>
