--- a/src/PolpAbp.Presentation.Account.Web/PolpAbp.Presentation.Account.Web.csproj
+++ b/src/PolpAbp.Presentation.Account.Web/PolpAbp.Presentation.Account.Web.csproj
@@ -29,7 +29,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\..\fwt\src\PolpAbp.Framework.AbpExtensions.Emailing\PolpAbp.Framework.AbpExtensions.Emailing.csproj" />
 	  <ProjectReference Include="..\..\..\fwt\src\PolpAbp.Framework.AbpExtensions.Identity\PolpAbp.Framework.AbpExtensions.Identity.csproj" />
+	  <ProjectReference Include="..\..\..\fwt\src\PolpAbp.Framework.AbpExtensions.Sms\PolpAbp.Framework.AbpExtensions.Sms.csproj" />
 	  <ProjectReference Include="..\..\..\fwt\src\PolpAbp.Framework.Application.Contracts\PolpAbp.Framework.Application.Contracts.csproj" />
 	  <ProjectReference Include="..\..\..\fwt\src\PolpAbp.Framework.Domain\PolpAbp.Framework.Domain.csproj" />
 	  <ProjectReference Include="..\..\..\fwt\src\PolpAbp.Framework.Mvc\PolpAbp.Framework.Mvc.csproj" />
