--- a/src/PolpAbp.Presentation.Account.Common/PolpAbp.Presentation.Account.Common.csproj
+++ b/src/PolpAbp.Presentation.Account.Common/PolpAbp.Presentation.Account.Common.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <Import Project="..\..\configureawait.props" />
 	<Import Project="..\..\common.props" />	
@@ -15,9 +15,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.Identity.AspNetCore" Version="5.3.2" />
-		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI" Version="5.3.2" />
-		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="5.3.2" />
+		<PackageReference Include="Volo.Abp.Identity.AspNetCore" Version="6.0.3" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI" Version="6.0.3" />
+		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="6.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
