--- a/src/PolpAbp.Presentation.Account.Web/PolpAbp.Presentation.Account.Web.csproj
+++ b/src/PolpAbp.Presentation.Account.Web/PolpAbp.Presentation.Account.Web.csproj
@@ -17,6 +17,7 @@
 	<ItemGroup>
 		<PackageReference Include="AspNetCore.ReCaptcha" Version="1.5.3" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Volo.Abp.Core" Version="7.0.0" />
 		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="7.0.0" />
 		<PackageReference Include="Volo.Abp.Identity.AspNetCore" Version="7.0.0" />
